updated Base64 libraries for Java 11